Made all nessecary html files

--- a/index.html
+++ b/index.html
@@ -6,10 +6,36 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Live Board</title>
+      <link rel="stylesheet" href="./css/style.css">
+      <link rel="shortcut icon" href="./resource/logo.ico" type="image/x-icon">
 </head>
 
 <body>
+      <header>
+            <nav>
+                  <div class="other">
+                        <div class="logo">
+                              <img src="./resource/logo.ico" alt="logo">
+                              <a href="./index.html">
+                                    <span>Live</span><span>Board</span>
+                              </a>
+                        </div>
+                        <div class="contact"><span>Contact Us</span></div>
+                        <div class="abt"><span>About Us</span></div>
+                  </div>
+                  <div class="account">
+                        <div class="sign-in">Sign In
+                              <span></span><span></span><span></span><span></span>
+                        </div>
+                        <div class="sign-up">Sign Up
+                              <span></span><span></span><span></span><span></span>
+                        </div>
+                  </div>
+      </header>
+      <div class="back">
 
+      </div>
+      <script src="./script/script.js"></script>
 </body>
 
 </html>
