now change colour while using pen

--- a/html/app.html
+++ b/html/app.html
@@ -30,10 +30,10 @@
                         <div class="color">
                               <h2>Pen Color</h2>
                               <div>
-                                    <span id="black" class="slected"></span>
+                                    <span id="black"></span>
                                     <span id="white"></span>
                                     <span id="red"></span>
-                                    <span id="blue"></span>
+                                    <span id="blue" class="slected"></span>
                                     <span id="green"></span>
                                     <span id="yellow"></span>
                                     <span id="purple"></span>
@@ -44,23 +44,27 @@
             <div class="text" data-name="text">
                   <div class="img"></div>
                   <span class="placeholder">text</span>
-                  <!-- <div class="option">
+                  <div class="option">
                         <div class="size">
-                              <h2>Text Size</h2>
-                              <span id="value">5px</span>
-                              <input type="range" value="1" id="size">
+                              <div>
+                                    <h2>Text Size</h2>
+                                    <span id="value">5px</span>
+                              </div>
+                              <input type="range" value="4" id="size" min="4" max="30">
                         </div>
                         <div class="color">
                               <h2>Text Color</h2>
-                              <span id="red"></span>
-                              <span id="blue"></span>
-                              <span id="green"></span>
-                              <span id="yellow"></span>
-                              <span id="purple"></span>
-                              <span id="white"></span>
-                              <span id="black"></span>
+                              <div>
+                                    <span id="black"></span>
+                                    <span id="white"></span>
+                                    <span id="red"></span>
+                                    <span id="blue" class="slected"></span>
+                                    <span id="green"></span>
+                                    <span id="yellow"></span>
+                                    <span id="purple"></span>
+                              </div>
                         </div>
-                  </div> -->
+                  </div>
             </div>
             <div class="shapes" data-name="shapes">
                   <div class="img"></div>
@@ -73,14 +77,16 @@
             <div class="eraser" data-name="eraser">
                   <div class="img"></div>
                   <span class="placeholder">eraser</span>
-                  <!-- <div class="option">
+                  <div class="option">
                         <div class="size">
-                              <h2>Eraser Size</h2>
-                              <span id="value">5px</span>
-                              <input type="range" value="1" id="size">
+                              <div>
+                                    <h2>Eraser Size</h2>
+                                    <span id="value">5px</span>
+                              </div>
+                              <input type="range" value="4" id="size" min="4" max="30">
                         </div>
                         <div class="clear">Clear Page</div>
-                  </div> -->
+                  </div>
             </div>
             <div class="undo" data-name="undo">
                   <div class="img"></div>
