--- a/html/app.html
+++ b/html/app.html
@@ -23,7 +23,7 @@
                         <div class="size">
                               <div>
                                     <h2>Pen Size</h2>
-                                    <span id="value">5px</span>
+                                    <span id="value">4px</span>
                               </div>
                               <input type="range" value="4" id="size" min="4" max="30">
                         </div>
@@ -48,7 +48,7 @@
                         <div class="size">
                               <div>
                                     <h2>Text Size</h2>
-                                    <span id="value">5px</span>
+                                    <span id="value">4px</span>
                               </div>
                               <input type="range" value="4" id="size" min="4" max="30">
                         </div>
@@ -66,10 +66,6 @@
                         </div>
                   </div>
             </div>
-            <div class="shapes" data-name="shapes">
-                  <div class="img"></div>
-                  <span class="placeholder">shapes</span>
-            </div>
             <div class="image" data-name="image">
                   <div class="img"></div>
                   <span class="placeholder">image</span>
@@ -81,9 +77,9 @@
                         <div class="size">
                               <div>
                                     <h2>Eraser Size</h2>
-                                    <span id="value">5px</span>
+                                    <span id="value">10px</span>
                               </div>
-                              <input type="range" value="4" id="size" min="4" max="30">
+                              <input type="range" value="10" id="size" min="10" max="40">
                         </div>
                         <div class="clear">Clear Page</div>
                   </div>
@@ -96,6 +92,7 @@
       <div class="container">
             <div class="cvs-bg"></div>
             <canvas></canvas>
+            <div class="erase"></div>
       </div>
       <script src="../script/app.js"></script>
 </body>
