Now you can undo and redo

--- a/html/app.html
+++ b/html/app.html
@@ -62,6 +62,7 @@
                                     <span id="green"></span>
                                     <span id="yellow"></span>
                                     <span id="purple"></span>
+                                    <input type="color" name="" id="">
                               </div>
                         </div>
                   </div>
@@ -87,6 +88,10 @@
             <div class="undo" data-name="undo">
                   <div class="img"></div>
                   <span class="placeholder">undo</span>
+            </div>
+            <div class="redo" data-name="redo">
+                  <div class="img"></div>
+                  <span class="placeholder">redo</span>
             </div>
       </div>
       <div class="container">
