Now you can download the canvas as an image video recording is stil not completed

--- a/html/app.html
+++ b/html/app.html
@@ -94,10 +94,46 @@
                   <span class="placeholder">redo</span>
             </div>
       </div>
+      <div class="other-tool">
+            <div class="record"></div>
+            <div class="down-img"></div>
+            <div class="bg"></div>
+      </div>
+      <div class="download-content-img">
+            <div class="close">
+                  <span></span>
+                  <span></span>
+            </div>
+            <img src>
+            <div class="dow-opt">
+                  <span class="download">Download</span>
+                  <div class="select">
+                        <div class="selected">
+                              <span>png</span>
+                              <div class="expand"></div>
+                        </div>
+                        <div class="option-img">
+                              <span>png</span>
+                              <span>jpg</span>
+                              <span>jpeg</span>
+                              <span>webp</span>
+                        </div>
+                  </div>
+            </div>
+      </div>
+      <div class="download-content-video">
+            <div class="close">
+                  <span></span>
+                  <span></span>
+            </div>
+            <video src controls></video>
+            <span class="download">Download</span>
+      </div>
       <div class="container">
             <div class="cvs-bg"></div>
             <canvas></canvas>
             <div class="erase"></div>
+            <div class="pointer"></div>
       </div>
       <script src="../script/app.js"></script>
 </body>
