Now You can record too

--- a/html/app.html
+++ b/html/app.html
@@ -41,36 +41,6 @@
                         </div>
                   </div>
             </div>
-            <div class="text" data-name="text">
-                  <div class="img"></div>
-                  <span class="placeholder">text</span>
-                  <div class="option">
-                        <div class="size">
-                              <div>
-                                    <h2>Text Size</h2>
-                                    <span id="value">4px</span>
-                              </div>
-                              <input type="range" value="4" id="size" min="4" max="30">
-                        </div>
-                        <div class="color">
-                              <h2>Text Color</h2>
-                              <div>
-                                    <span id="black"></span>
-                                    <span id="white"></span>
-                                    <span id="red"></span>
-                                    <span id="blue" class="slected"></span>
-                                    <span id="green"></span>
-                                    <span id="yellow"></span>
-                                    <span id="purple"></span>
-                                    <input type="color" name="" id="">
-                              </div>
-                        </div>
-                  </div>
-            </div>
-            <div class="image" data-name="image">
-                  <div class="img"></div>
-                  <span class="placeholder">image</span>
-            </div>
             <div class="eraser" data-name="eraser">
                   <div class="img"></div>
                   <span class="placeholder">eraser</span>
@@ -128,6 +98,208 @@
             </div>
             <video src controls></video>
             <span class="download">Download</span>
+      </div>
+      <div class="background">
+            <div class="close">
+                  <span></span>
+                  <span></span>
+            </div>
+            <div>
+                  <div class="bg1">
+                        <span class="circle-grp">
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                        </span>
+                        <span class="circle-grp">
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                        </span>
+                        <span class="circle-grp">
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                        </span>
+                        <span class="circle-grp">
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                        </span>
+                        <span class="circle-grp">
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                        </span>
+                        <span class="circle-grp">
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                              <span class="circle"></span>
+                        </span>
+                  </div>
+                  <div class="bg2">
+                        <span class="square-grp">
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                        </span>
+                        <span class="square-grp">
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                        </span>
+                        <span class="square-grp">
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                        </span>
+                        <span class="square-grp">
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                        </span>
+                        <span class="square-grp">
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                        </span>
+                        <span class="square-grp">
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                              <span class="square"></span>
+                        </span>
+                  </div>
+                  <div class="bg3">
+                        <span class="line-grp">
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                        </span>
+                        <span class="line-grp">
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                        </span>
+                        <span class="line-grp">
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                        </span>
+                        <span class="line-grp">
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                        </span>
+                        <span class="line-grp">
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                        </span>
+                        <span class="line-grp">
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                              <span class="line"></span>
+                        </span>
+                  </div>
+                  <div class="bg4">
+                  </div>
+            </div>
+            <div class="desc">
+                  <span>Circles</span>
+                  <span>Grid</span>
+                  <span>Lines</span>
+                  <span>Plain</span>
+            </div>
       </div>
       <div class="container">
             <div class="cvs-bg"></div>
