Login and sign up form made

--- a/html/form.html
+++ b/html/form.html
@@ -7,14 +7,14 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="shortcut icon" href="../resource/logo.ico" type="image/x-icon">
       <link rel="stylesheet" href="../css/form.css">
-      <title>Sign In</title>
+      <title>Login</title>
 </head>
 
 <body>
       <div class="background"></div>
       <div class="obj"></div>
       <div class="container">
-            <div class="login">
+            <div class="form login">
                   <h1><img src="../resource/logo.ico"><span class="black">Please</span> Login</h1>
                   <form>
                         <div class="form-control">
@@ -29,7 +29,7 @@
                         <p class="text">Don't have an account? <a href="#">Register</a></p>
                   </form>
             </div>
-            <div class="signup">
+            <div class="form signup">
                   <h1><img src="../resource/logo.ico"><span class="black">Please</span> Sign Up</h1>
                   <form>
                         <div class="form-control">
@@ -42,14 +42,14 @@
                         </div>
                         <div class="form-control">
                               <input type="password" required>
-                              <label>Password</label>
+                              <label>Confirm Password</label>
                         </div>
                         <button class="btn">Sign Up</button>
                         <p class="text">Already have an account? <a href="#">Login</a></p>
                   </form>
             </div>
       </div>
-      <script src="../script/valid.js"></script>
+      <script src="../script/form.js"></script>
 </body>
 
 </html>
