--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <div class="abt"><span>About Us</span></div>
                   </div>
                   <div class="account">
-                        <div class="sign-in">Sign In
+                        <div class="sign-in">Login
                               <span></span><span></span><span></span><span></span>
                         </div>
                         <div class="sign-up">Sign Up
