--- a/html/form.html
+++ b/html/form.html
@@ -26,7 +26,7 @@
                               <label>Password</label>
                         </div>
                         <button class="btn">Login</button>
-                        <p class="text">Don't have an account? <a href="#">Register</a></p>
+                        <p class="text">Don't have an account? <a>Register</a></p>
                   </form>
             </div>
             <div class="form signup">
@@ -45,7 +45,7 @@
                               <label>Confirm Password</label>
                         </div>
                         <button class="btn">Sign Up</button>
-                        <p class="text">Already have an account? <a href="#">Login</a></p>
+                        <p class="text">Already have an account? <a>Login</a></p>
                   </form>
             </div>
       </div>
