--- a/html/form.html
+++ b/html/form.html
@@ -16,37 +16,37 @@
       <div class="container">
             <div class="form login">
                   <h1><img src="../resource/logo.ico"><span class="black">Please</span> Login</h1>
-                  <form>
+                  <div class="form-container">
                         <div class="form-control">
-                              <input type="text" required>
+                              <input type="text" required name="name">
                               <label>Username</label>
                         </div>
                         <div class="form-control">
-                              <input type="password" required>
+                              <input type="password" required name="password">
                               <label>Password</label>
                         </div>
                         <button class="btn">Login</button>
                         <p class="text">Don't have an account? <a>Register</a></p>
-                  </form>
+                  </div>
             </div>
             <div class="form signup">
                   <h1><img src="../resource/logo.ico"><span class="black">Please</span> Sign Up</h1>
-                  <form>
+                  <div class="form-container">
                         <div class="form-control">
-                              <input type="text" required>
+                              <input type="text" required name="name">
                               <label>Username</label>
                         </div>
                         <div class="form-control">
-                              <input type="password" required>
+                              <input type="password" required name="password">
                               <label>Password</label>
                         </div>
                         <div class="form-control">
-                              <input type="password" required>
+                              <input type="password" required name="confirm-password">
                               <label>Confirm Password</label>
                         </div>
                         <button class="btn">Sign Up</button>
                         <p class="text">Already have an account? <a>Login</a></p>
-                  </form>
+                  </div>
             </div>
       </div>
       <script src="../script/form.js"></script>
