--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
                               <span></span><span></span><span></span><span></span>
                         </div>
                   </div>
+                  <div class="account logged-in">
+                        <div class="create">Create Board
+                              <span></span><span></span><span></span><span></span>
+                        </div>
+                        <div class="log-out">Log Out
+                              <span></span><span></span><span></span><span></span>
+                        </div>
+                  </div>
       </header>
       <div class="back">
 
